--- a/LifeAsAnObsession.html
+++ b/LifeAsAnObsession.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>LifeAsAnObsession</title>
-</head>
+  <head>
+    <title>LifeAsAnObsession</title>
+    </head>
 
-<body>
+  <body>
 
-<h1>Dear WWW,</h1>
-<p>This is what journaling is for the 18 year-old girl who made this ever-changing website. This is me working it out in the remix (with myself)!</p>
+    <h1>Dear WWW,</h1>
+    <p>This is what journaling is for the 18 year-old girl who made this ever-changing website. This is me working it out in the remix (with myself)!</p>
 
-</body>
+  </body>
 </html>
